Prod-EU/force-app/main/default/objects/CRM_Address_Event__e/CRM_Address_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event invoked from Kafka to Salesforce upon Address inserts and updates</description>
    <label>CRM Address Event - In</label>
    <pluralLabel>CRM Address Events - In</pluralLabel>
</CustomObject>