Prod-EU/force-app/main/default/objects/CRM_Address_Event__e/fields/address1__c.field-meta.xml
<CustomField>
    <fullName>address1__c</fullName>
    <label>address1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>