Prod-EU/force-app/main/default/objects/CRM_Address_Event__e/fields/address2__c.field-meta.xml
<CustomField>
    <fullName>address2__c</fullName>
    <label>address2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>