Prod-EU/force-app/main/default/objects/CRM_Address_Event__e/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>city</label>
    <length>200</length>
    <type>Text</type>
</CustomField>