Prod-EU/force-app/main/default/objects/CRM_Address_Event__e/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>