Prod-EU/force-app/main/default/objects/CRM_Address_Event__e/fields/lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <label>lastName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>