Prod-EU/force-app/main/default/objects/CRM_Address_Event__e/fields/taxExempt__c.field-meta.xml
<CustomField>
    <fullName>taxExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>taxExempt</label>
    <type>Checkbox</type>
</CustomField>