Prod-EU/force-app/main/default/objects/CRM_Address_Event__e/fields/taxRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>taxRegistrationNumber__c</fullName>
    <label>taxRegistrationNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>